# Server-Hardening

./: .gitignore  README.md  pyproject.toml
docs/: arquitetura.md  metodologia-avaliacao.md  playbook-validacao.md
exemplos/: politica_hardening_debian.json
scripts/: instalar_dependencias.sh
src/: cli.py
src/hardening/: __init__.py  ansible.py  auditoria.py  coletor.py  distribuicoes.py  executor.py  modelos.py  relatorio.py
