[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-hardening-linux"
version = "0.1.0"
description = "Automacao de hardening Linux com foco inicial em Debian/APT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Equipe de Seguranca"}]
dependencies = []

[project.scripts]
hardener = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
